# opencl-interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  opencl_interface.cpp  opencl_interface.h
